--- a/dapp/src/components/Layout/Layout.scss
+++ b/dapp/src/components/Layout/Layout.scss
@@ -8,12 +8,15 @@
   //   padding: 10px;
 
   .layout-top {
+    border: 1px solid black;
+    border-radius: 10px;
+    margin: 10px;
     grid-area: header;
-    padding-inline: 10px;
+    padding: 10px;
     display: flex;
-    justify-content: end;
+    justify-content: space-between;
     align-items: center;
-    gap: 10px;
+    gap: 100px;
     flex-flow: row wrap;
     background-color: lightgray;
 
