--- a/dapp/src/components/Layout/Layout.scss
+++ b/dapp/src/components/Layout/Layout.scss
@@ -2,23 +2,26 @@
   display: grid;
   grid-template-areas:
     "header"
-    "main"
-    "footer";
+    "main";
   gap: 10px;
-  //   padding: 10px;
+  height: 100vh;
 
   .layout-top {
-    border: 1px solid black;
-    border-radius: 10px;
-    margin: 10px;
     grid-area: header;
-    padding: 10px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 100px;
-    flex-flow: row wrap;
-    background-color: lightgray;
+
+    .navbar {
+      border: 1px solid black;
+      color: white;
+      border-radius: 10px;
+      margin: 10px;
+      padding: 10px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      gap: 100px;
+      flex-flow: row wrap;
+      background-color: black;
+    }
 
     .logout-btn {
       background-color: #ff5c3a;
@@ -28,9 +31,9 @@
   }
   .main {
     grid-area: main;
+    margin-bottom: 30px;
   }
   .layout-bottom {
     grid-area: footer;
-    // background-color: aqua;
   }
 }
