--- a/dapp/src/pages/Home/Home.scss
+++ b/dapp/src/pages/Home/Home.scss
@@ -1,6 +1,7 @@
 .wrapper {
+  height: 100%;
   display: grid;
-  grid-template-areas: "left middle right";
+  grid-template-areas: "left middle middle middle  right";
 
   .btn-black {
     background-color: black;
@@ -9,9 +10,6 @@
     padding: 4px;
 
     &.arrow {
-      //   position: absolute;
-      //   bottom: 0;
-      //   right: 0;
       padding: 0;
       font-size: 30px;
       border-radius: 20px;
@@ -54,13 +52,31 @@
     padding: 10px;
     border: 1px solid gray;
     border-radius: 20px;
+
+    &.corner {
+      border-radius: 1px 20px 20px 1px;
+      border-left: 0;
+      display: flex;
+      margin-left: 0;
+      padding: 10px 00px 0px 10px;
+      img {
+        margin-left: 40px;
+        transform: scalex(-1);
+        width: 150px;
+        height: 150px;
+        border-radius: 1px 1px 1px 20px;
+      }
+    }
   }
 
   .black-box {
-    max-width: 506;
+    // max-width: 506;
+
     display: flex;
     flex-direction: column;
     align-items: center;
+    // align-self: flex-start;
+
     margin: 10px;
     padding: 30px;
     background-color: black;
@@ -82,13 +98,11 @@
     grid-area: middle;
 
     display: grid;
-    grid-template-areas:
-      "middle-left middle-right"
-      "middle-left middle-right";
+    align-items: flex-end;
+    grid-template-areas: "middle-left  middle-left middle-right";
 
     .middle-left {
       grid-area: middle-left;
-
       display: grid;
       grid-template-areas:
         "wallet-setup wallet-setup"
@@ -96,30 +110,30 @@
 
       .wallet-setup {
         grid-area: wallet-setup;
-        align-self: flex-end;
+        // align-self: flex-end;
         display: flex;
         align-items: center;
       }
       .middle-left-bottom-left {
         grid-area: middle-left-bottom-left;
-        align-self: flex-end;
+        // align-self: flex-end;
         height: 300px;
       }
       .middle-left-bottom-right {
         grid-area: middle-left-bottom-right;
-        align-self: flex-end;
+        // align-self: flex-end;
         height: 300px;
       }
     }
 
     .middle-right {
       grid-area: middle-right;
-      align-self: flex-end;
     }
   }
 
   .right {
     grid-area: right;
-    // max-width: 10%;
+    display: grid;
+    align-items: end;
   }
 }
