--- a/dapp/src/pages/Login/Login.scss
+++ b/dapp/src/pages/Login/Login.scss
@@ -1,5 +1,7 @@
 .login-form {
-  display: grid;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
   button {
     margin-top: 10px;
