--- a/dapp/src/pages/Login/Login.scss
+++ b/dapp/src/pages/Login/Login.scss
@@ -1,10 +1,31 @@
-.login-form {
+.login-page {
+  margin: auto;
+  margin-top: 150px;
+  max-width: 30%;
   display: flex;
   flex-direction: column;
-  align-items: center;
 
-  button {
-    margin-top: 10px;
-    background-color: lightblue;
+  .login-form {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    padding-left: 30%;
+
+    label {
+      float: inline-start;
+      width: 6em;
+      text-align: left;
+    }
+
+    // input,
+    // textarea {
+    //   text-align: left;
+    //   width: 20em;
+    // }
+
+    button {
+      margin-top: 40px;
+      background-color: lightblue;
+    }
   }
 }
