--- a/dapp/src/pages/Home/Home.scss
+++ b/dapp/src/pages/Home/Home.scss
@@ -1,7 +1,6 @@
 .wrapper {
-  height: 100%;
   display: grid;
-  grid-template-areas: "left middle middle middle  right";
+  grid-template-areas: "left middle right";
 
   .btn-black {
     background-color: black;
@@ -13,24 +12,10 @@
       padding: 0;
       font-size: 30px;
       border-radius: 20px;
-      width: 40px;
-      height: 40px;
+      min-width: 40px;
+      min-height: 40px;
+      align-self: flex-end;
     }
-
-    &.copy {
-      padding: 0;
-      border-radius: 15px;
-      //   align-items: center;
-      padding-top: 5px;
-      border-radius: 20px;
-      width: 40px;
-      height: 40px;
-    }
-  }
-
-  .btn-green {
-    background-color: #94ed49;
-    padding: 3px;
   }
 
   .label {
@@ -38,6 +23,8 @@
     font-weight: 700;
     line-height: 35px;
     text-align: left;
+    margin: 0;
+    padding: 0;
   }
   .description {
     color: #767676;
@@ -45,6 +32,9 @@
     font-weight: 400;
     line-height: 30px;
     text-align: left;
+    margin: 0;
+    padding: 0;
+    margin-top: 15px;
   }
 
   .white-box {
@@ -52,12 +42,28 @@
     padding: 10px;
     border: 1px solid gray;
     border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    input,
+    button {
+      margin-top: 10px;
+    }
+
+    input {
+      border-radius: 5px;
+    }
+
+    button:disabled {
+      background-color: gray;
+    }
 
     &.corner {
       border-radius: 1px 20px 20px 1px;
       border-left: 0;
-      display: flex;
       margin-left: 0;
+      display: flex;
       padding: 10px 00px 0px 10px;
       img {
         margin-left: 40px;
@@ -66,26 +72,6 @@
         height: 150px;
         border-radius: 1px 1px 1px 20px;
       }
-    }
-  }
-
-  .black-box {
-    // max-width: 506;
-
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    // align-self: flex-start;
-
-    margin: 10px;
-    padding: 30px;
-    background-color: black;
-
-    border-radius: 20px;
-
-    p {
-      text-align: center;
-      color: white;
     }
   }
 
@@ -106,23 +92,12 @@
       display: grid;
       grid-template-areas:
         "wallet-setup wallet-setup"
-        "middle-left-bottom-left middle-left-bottom-right";
+        "wallet-data refer-friend";
 
       .wallet-setup {
         grid-area: wallet-setup;
-        // align-self: flex-end;
         display: flex;
-        align-items: center;
-      }
-      .middle-left-bottom-left {
-        grid-area: middle-left-bottom-left;
-        // align-self: flex-end;
-        height: 300px;
-      }
-      .middle-left-bottom-right {
-        grid-area: middle-left-bottom-right;
-        // align-self: flex-end;
-        height: 300px;
+        flex-direction: row;
       }
     }
 
@@ -133,7 +108,8 @@
 
   .right {
     grid-area: right;
-    display: grid;
-    align-items: end;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
   }
 }
